[package]
name = "configoo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.20.0"
csv = "1.2.2"
rust-embed = "6.7.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
tera = "1.19.0"
#office = "0.8.1"
